# aura

./: .gitignore  README.md  justfile  pyproject.toml
config/: campaign.yaml
epconfig/: user.yaml
src/aura2/: __init__.py  main.py  paths.py
src/aura2/analysis/: build.py  tables.py
src/aura2/analysis/figures/: boxes.py  geometry.py  sensitivity.py  stages.py  weather.py
src/aura2/analysis/sources/: climate.py  weather_io.py
src/aura2/analysis/utils/: common.py  data.py  order.py
src/aura2/cli/make/: collect.py  main.py
src/aura2/cli/studies/: eplus_compare.py  real_plans.py  study.py
src/aura2/cli/studies/robustness/: perturb.py  report.py
src/aura2/cli/studies/validation/: eplus_compare.py
src/aura2/cli/studies/validation/robustness/: metrics.py  run.py  select.py  thermal.py
src/aura2/cli/validate/: p2ep.py  robustness.py  val.py
src/aura2/geom/: adjacencies.py  details.py  zones.py
src/aura2/pipeline/: __init__.py  defn.py  design.py  manifest.py  modifications.py  paths.py  spec.py
src/aura2/validation/p2ep/: build.py  figures.py  metrics.py  paths.py
src/aura2/validation/p2ep/shims/: __init__.py  constructions.py  cracks.py  discharge_coefficient.py  venting_control.py
src/aura2/validation/robustness/: metrics.py  paths.py  perturb.py  report.py  run.py  select.py  thermal.py
static/1_input/: AURA Plans.fig
static/1_input/real_plans/b/: config.yaml
static/1_input/real_plans/c/: config.yaml
static/1_inputs/eplus_compare/: config.yaml  eplus.adj.yaml
static/1_inputs/real_plans/: conversions.numi
static/1_inputs/real_plans/a/: config.yaml
static/5_figures/validation/: table1_validity.csv  table3_energy.csv
workflow/: Snakefile
workflow/rules/: campaign.smk
