[project]
name = "aura2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
  { name = "Juliet Nwagwu Ume-Ezeoke", email = "jnwagwu@stanford.edu" },
]
requires-python = ">=3.13"
dependencies = ["plan2eplus", "sv2", "utils4plans"]

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"

[tool.uv.sources]
utils4plans = { path = "../utils4plans", editable = true }
sv2 = { path = "../sv2", editable = true }
plan2eplus = { path = "../plan2eplus", editable = true }


[project.scripts]
au = "aura2.cli.make.main:main"
aus = "aura2.cli.studies.study:main"
