[project]
name = "aura2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
  { name = "Juliet Nwagwu Ume-Ezeoke", email = "jnwagwu@stanford.edu" },
]
requires-python = ">=3.13"
dependencies = [
    "plan2eplus",
    "sv2",
    "utils4plans[figures]",
    "plyze",
    "vl-convert-python>=1.0",
    "seaborn>=0.13",
    "snakemake>=9.16.3",
    "tqdm>=4.68",
    "astropy>=8.0.1",
    "python-dotenv>=1.2.2",
]

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"

[tool.uv.sources]
utils4plans = { path = "../utils4plans", editable = true }
sv2 = { path = "../sv2", editable = true }
plan2eplus = { path = "../plan2eplus", editable = true }
plyze = { path = "../plyze", editable = true }


[project.scripts]
au = "aura2.cli.make.main:main"
aus = "aura2.cli.studies.study:main"
auv = "aura2.cli.validate.val:main"
